--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Nikkah of Savera & Ibrahim</title>
 
+    <meta property="og:title" content="The Nikkah of Savera & Ibrahim">
+    <meta property="og:description" content="We invite you to celebrate our special day. Tap to open invitation.">
+    <meta property="og:image" content="flower.png">
+    <meta property="og:type" content="website">
+
     <link href="https://fonts.googleapis.com/css2?family=Pinyon+Script&family=Cormorant+Garamond:wght@300;600&family=Montserrat:wght@300&display=swap" rel="stylesheet">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
@@ -248,7 +253,7 @@
     <h2 class="invite-text" data-aos="fade-up">The Venue</h2>
     <div style="font-size: 1.8rem; color: var(--pastel-green); margin-bottom: 5px;" data-aos="fade-up">Dehleez Shadi Hall</div>
     <p style="margin: 0;" data-aos="fade-up">Nisar Bagh Resort, Mansehra</p>
-    <a href="https://maps.google.com" target="_blank" class="btn" data-aos="zoom-in">LOCATE ON MAP</a>
+    <a href="https://www.google.com/maps/search/?api=1&query=34.344333,73.218472" target="_blank" class="btn" data-aos="zoom-in">LOCATE ON MAP</a>
 </section>
 
 <section class="thank-you-section">
