--- a/index.html
+++ b/index.html
@@ -3,14 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Nikkah of Savera & Ibrahim</title>
+    <title>The Nikkah of Savera Khan & Ahmad Ibrahim Khan</title>
 
-    <meta property="og:title" content="The Nikkah of Savera & Ibrahim">
-    <meta property="og:description" content="We invite you to celebrate our special day. Tap to open invitation.">
-    <meta property="og:image" content="flower.png">
-    <meta property="og:type" content="website">
-
-    <link href="https://fonts.googleapis.com/css2?family=Pinyon+Script&family=Cormorant+Garamond:wght@300;600&family=Montserrat:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Pinyon+Script&family=Cormorant+Garamond:wght@300;600;700&family=Montserrat:ital,wght@0,300;0,600;1,600&display=swap" rel="stylesheet">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
     <style>
@@ -20,6 +15,7 @@
             --off-white: #f2eee4; 
             --text-dark: #3e4a3e;
             --gold: #c5a059;
+            --image-green: #869e88; 
         }
 
         body {
@@ -28,7 +24,33 @@
             color: var(--text-dark);
             background-color: var(--off-white);
             text-align: center;
-            overflow: hidden;
+            overflow: hidden; 
+        }
+
+        /* Flower Styling - Updated Opacity and removed blur */
+        .falling-flower {
+            position: fixed;
+            top: -20%;
+            pointer-events: none;
+            z-index: 1; 
+            background-image: url('flower.png'); 
+            background-size: contain;
+            background-repeat: no-repeat;
+            opacity: 0.9; /* Increased from 0.6 for less transparency */
+            filter: none; /* Removed blur to make them clearer */
+            animation: flowerFall linear forwards, flowerSway ease-in-out infinite;
+        }
+
+        @keyframes flowerFall {
+            0% { transform: translateY(-10vh) rotate(0deg); opacity: 0; }
+            10% { opacity: 0.9; }
+            90% { opacity: 0.9; }
+            100% { transform: translateY(110vh) rotate(120deg); opacity: 0; }
+        }
+
+        @keyframes flowerSway {
+            0%, 100% { margin-left: 0px; }
+            50% { margin-left: 70px; }
         }
 
         /* Envelope Overlay */
@@ -37,7 +59,7 @@
             top: 0; left: 0;
             width: 100vw; height: 100vh;
             background-color: var(--pastel-green);
-            z-index: 4000;
+            z-index: 6000;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -45,27 +67,32 @@
             transition: transform 1.2s cubic-bezier(0.4, 0, 0.2, 1);
         }
 
-        .seal-container { text-align: center; z-index: 4001; }
+        .seal-container { display: flex; flex-direction: column; align-items: center; }
+        
         .seal {
-            width: 80px; height: 80px;
+            width: 130px; height: 130px;
             background: var(--gold);
             border-radius: 50%;
-            margin: 0 auto 20px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            color: white;
-            font-family: 'Pinyon Script';
-            font-size: 2rem;
-            box-shadow: 0 4px 20px rgba(0,0,0,0.3);
-            border: 2px solid rgba(255,255,255,0.3);
+            margin-bottom: 25px;
+            display: flex; align-items: center; justify-content: center;
+            gap: 2px; color: white;
+            font-family: "Script MT Bold", "Brush Script MT", "Pinyon Script", cursive;
+            font-size: 36px; 
+            font-style: italic;
+            box-shadow: 0 8px 30px rgba(0,0,0,0.3);
+            border: 4px solid rgba(255,255,255,0.4);
+            padding-top: 5px;
+        }
+
+        .seal span { 
+            font-size: 24px; 
+            margin: 0 3px;
+            font-style: italic;
         }
 
         .tap-text {
-            font-family: 'Montserrat';
-            color: white;
-            letter-spacing: 5px;
-            font-size: 0.8rem;
+            font-family: 'Montserrat'; color: white;
+            letter-spacing: 5px; font-size: 0.8rem;
             text-transform: uppercase;
             animation: breathe 2s infinite;
         }
@@ -77,144 +104,78 @@
 
         .envelope-opened { transform: translateY(-100vh) !important; }
 
-        /* Baby's Breath Animation */
-        .falling-flower {
-            position: fixed;
-            top: -20%;
-            pointer-events: none;
-            z-index: 0;
-            background-image: url('flower.png'); 
-            background-size: contain;
-            background-repeat: no-repeat;
-            opacity: 0.8;
-            animation: flowerFall linear forwards, flowerSway ease-in-out infinite;
-        }
-
-        @keyframes flowerFall {
-            0% { transform: translateY(-10vh) rotate(0deg); opacity: 0; }
-            10% { opacity: 0.8; }
-            90% { opacity: 0.8; }
-            100% { transform: translateY(110vh) rotate(120deg); opacity: 0; }
-        }
-
-        @keyframes flowerSway {
-            0%, 100% { margin-left: 0px; }
-            50% { margin-left: 70px; }
-        }
-
-        /* Decoration Borders */
-        .page-border {
-            position: fixed; top: 0; left: 0; right: 0; bottom: 0;
-            border: 12px solid var(--pastel-green);
-            pointer-events: none;
-            z-index: 1000;
-        }
-
-        .inner-border {
-            position: fixed; top: 25px; left: 25px; right: 25px; bottom: 25px;
-            border: 1px solid var(--pastel-green);
-            pointer-events: none;
-            z-index: 999;
-            opacity: 0.4;
-        }
-
-        /* Scratch-to-Reveal Logic */
-        .reveal-container {
-            position: relative;
-            display: inline-block;
-            margin: 20px 0;
-            cursor: pointer;
-        }
-
-        .date-location {
-            font-size: 1.2rem;
-            border-top: 1px solid var(--pastel-green);
-            border-bottom: 1px solid var(--pastel-green);
-            padding: 12px 30px;
-            background: rgba(255,255,255,0.4);
-            display: block;
-        }
-
-        .scratch-overlay {
+        .scroll-hint {
             position: absolute;
-            top: 0; left: 0;
-            width: 100%; height: 100%;
-            background: linear-gradient(135deg, #c5a059 0%, #e8d5a1 50%, #c5a059 100%);
-            color: white;
-            display: flex;
+            bottom: 30px;
+            left: 50%;
+            transform: translateX(-50%);
+            display: none;
+            flex-direction: column;
             align-items: center;
-            justify-content: center;
+            color: var(--pastel-green);
             font-family: 'Montserrat';
             font-size: 0.6rem;
-            letter-spacing: 3px;
-            text-transform: uppercase;
-            z-index: 10;
-            transition: opacity 0.8s ease, transform 0.8s ease;
-            box-shadow: inset 0 0 10px rgba(0,0,0,0.1);
+            letter-spacing: 2px;
+            animation: bounce 2s infinite;
+            z-index: 5;
         }
 
-        .scratched {
-            opacity: 0;
-            pointer-events: none;
-            transform: scale(1.1);
+        @keyframes bounce {
+            0%, 20%, 50%, 80%, 100% {transform: translateX(-50%) translateY(0);}
+            40% {transform: translateX(-50%) translateY(-10px);}
+            60% {transform: translateX(-50%) translateY(-5px);}
         }
 
-        #music-toggle {
-            position: fixed;
-            bottom: 35px; right: 35px;
-            z-index: 2000;
-            background: var(--pastel-green);
-            color: white;
-            border: none;
-            width: 45px; height: 45px;
-            border-radius: 50%;
-            display: none;
-            align-items: center;
-            justify-content: center;
-            box-shadow: 0 4px 15px rgba(0,0,0,0.2);
-            font-size: 1.2rem;
-            cursor: pointer;
+        section {
+            padding: 80px 20px;
+            position: relative;
+            z-index: 2; 
         }
 
-        /* Sections Styling */
         .hero {
-            min-height: 100vh;
+            height: 100vh;
             display: flex;
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            padding: 40px 20px;
-            position: relative;
-            z-index: 2;
+            padding: 0 20px;
+            box-sizing: border-box;
         }
 
-        .bismillah { font-size: 1.6rem; color: var(--pastel-green); margin-bottom: 20px; }
-        .invite-text { font-family: 'Montserrat'; text-transform: uppercase; letter-spacing: 4px; font-size: 0.65rem; color: var(--dark-green); margin-bottom: 15px; }
-        .name-line { font-family: 'Pinyon Script'; font-size: 3.2rem; color: var(--pastel-green); margin: 0; line-height: 1.1; }
+        .page-border { position: fixed; top: 0; left: 0; right: 0; bottom: 0; border: 12px solid var(--pastel-green); pointer-events: none; z-index: 1000; }
+        .inner-border { position: fixed; top: 25px; left: 25px; right: 25px; bottom: 25px; border: 1px solid var(--pastel-green); pointer-events: none; z-index: 999; opacity: 0.4; }
+
+        .bismillah { font-size: 1.8rem; color: var(--pastel-green); margin-bottom: 20px; }
+        .invite-text { font-family: 'Montserrat'; text-transform: uppercase; letter-spacing: 2px; font-size: 0.5rem; color: var(--dark-green); margin-bottom: 30px; line-height: 1.8; }
+        .name-line { font-family: 'Pinyon Script'; font-size: 2.2rem; color: var(--pastel-green); margin: 0; line-height: 1.1; }
         .ampersand { font-family: 'Cormorant Garamond'; font-size: 1.5rem; color: var(--dark-green); font-style: italic; margin: 5px 0; }
 
-        #countdown { display: flex; gap: 12px; margin-top: 15px; background: rgba(120, 150, 122, 0.15); padding: 12px 25px; border-radius: 50px; backdrop-filter: blur(2px); }
+        .reveal-container { position: relative; display: inline-block; margin: 25px 0; cursor: pointer; }
+        .date-location { font-size: 1.2rem; border-top: 1px solid var(--pastel-green); border-bottom: 1px solid var(--pastel-green); padding: 12px 30px; background: rgba(255,255,255,0.4); }
+        .scratch-overlay { position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: linear-gradient(135deg, #c5a059 0%, #e8d5a1 50%, #c5a059 100%); color: white; display: flex; align-items: center; justify-content: center; font-family: 'Montserrat'; font-size: 0.6rem; letter-spacing: 3px; text-transform: uppercase; z-index: 10; transition: 0.8s; }
+        .scratched { opacity: 0; pointer-events: none; transform: scale(1.1); }
+
+        #countdown { display: flex; gap: 12px; margin-top: 25px; background: rgba(120, 150, 122, 0.15); padding: 12px 25px; border-radius: 50px; }
         .time-box span { display: block; font-size: 1.2rem; font-weight: bold; font-family: 'Montserrat'; }
         .label { font-size: 0.45rem; letter-spacing: 2px; }
 
-        .venue-section { padding: 80px 20px; background: rgba(255,255,255,0.2); position: relative; z-index: 2; }
-        .btn { display: inline-block; margin-top: 30px; background-color: var(--pastel-green); color: white; padding: 12px 35px; text-decoration: none; font-family: 'Montserrat'; border-radius: 30px; font-size: 0.75rem; letter-spacing: 1px; transition: 0.3s; }
+        .venue-header { font-family: 'Montserrat'; text-transform: uppercase; letter-spacing: 3px; font-size: 0.8rem; color: var(--dark-green); margin-bottom: 25px; }
+        .venue-hall { font-family: 'Cormorant Garamond', serif; font-size: 2.8rem; font-weight: 600; color: var(--image-green); margin: 0; line-height: 1.1; }
+        .venue-address { font-family: 'Cormorant Garamond', serif; font-size: 1.1rem; color: var(--text-dark); margin: 10px 0; letter-spacing: 1px; opacity: 0.8; }
 
-        /* New Thank You Section */
-        .thank-you-section {
-            padding: 100px 20px;
-            position: relative;
-            z-index: 2;
-        }
-        .thank-you-msg { font-family: 'Montserrat'; font-size: 0.7rem; letter-spacing: 3px; color: var(--dark-green); text-transform: uppercase; margin-bottom: 10px; }
-        .signature { font-family: 'Pinyon Script'; font-size: 2.5rem; color: var(--pastel-green); }
+        .btn { display: inline-block; margin-top: 30px; background-color: var(--pastel-green); color: white; padding: 12px 35px; text-decoration: none; font-family: 'Montserrat'; border-radius: 30px; font-size: 0.75rem; letter-spacing: 1px; }
+
+        .thank-you-section { padding: 100px 20px 140px; }
+        .thank-you-msg { font-family: 'Montserrat'; font-size: 0.75rem; letter-spacing: 3px; color: var(--dark-green); text-transform: uppercase; max-width: 80%; margin: 0 auto; line-height: 1.8; }
+
+        #music-toggle { position: fixed; bottom: 35px; right: 35px; z-index: 2000; background: var(--pastel-green); color: white; border: none; width: 45px; height: 45px; border-radius: 50%; display: none; align-items: center; justify-content: center; cursor: pointer; }
     </style>
 </head>
 <body id="main-body">
 
 <div id="envelope-wrapper" onclick="openInvitation()">
     <div class="seal-container">
-        <div class="seal">S&I</div>
+        <div class="seal">S<span>&</span>I</div>
         <div class="tap-text">Tap to Open</div>
     </div>
 </div>
@@ -229,89 +190,79 @@
 
 <section class="hero">
     <div class="bismillah" data-aos="fade-down">بِسْمِ اللهِ الرَّحْمٰنِ الرَّحِيْمِ</div>
-    <p class="invite-text" data-aos="fade-up">In the name of Allah, we invite you to celebrate the Nikkah of</p>
-    
+    <p class="invite-text" data-aos="fade-up">By the grace and blessings of Allah Almighty,<br>we warmly request the honor of your presence<br>at the Nikkah ceremony of</p>
     <div class="names-container" data-aos="zoom-in">
-        <h1 class="name-line">Savera</h1>
+        <h1 class="name-line">Savera Khan</h1>
         <div class="ampersand">&</div>
-        <h1 class="name-line">Ibrahim</h1>
+        <h1 class="name-line">Ahmad Ibrahim Khan</h1>
     </div>
-
     <div class="reveal-container" onclick="revealDate()" data-aos="fade-up">
         <div class="scratch-overlay" id="scratch-bar">Tap to reveal date</div>
         <div class="date-location">March 24, 2026 • 1:00 PM</div>
     </div>
-
     <div id="countdown" data-aos="fade-up">
         <div class="time-box"><span id="days">00</span><div class="label">DAYS</div></div>
         <div class="time-box" style="border-left: 1px solid rgba(0,0,0,0.1); border-right: 1px solid rgba(0,0,0,0.1); padding: 0 10px;"><span id="hours">00</span><div class="label">HOURS</div></div>
         <div class="time-box"><span id="mins">00</span><div class="label">MINS</div></div>
     </div>
+    <div class="scroll-hint" id="scroll-hint">
+        <span>SCROLL DOWN</span>
+        <span>▼</span>
+    </div>
 </section>
 
 <section class="venue-section">
-    <h2 class="invite-text" data-aos="fade-up">The Venue</h2>
-    <div style="font-size: 1.8rem; color: var(--pastel-green); margin-bottom: 5px;" data-aos="fade-up">Dehleez Shadi Hall</div>
-    <p style="margin: 0;" data-aos="fade-up">Nisar Bagh Resort, Mansehra</p>
+    <h2 class="venue-header" data-aos="fade-up">The Venue</h2>
+    <div class="venue-hall" data-aos="fade-up">Dehleez Shadi Hall</div>
+    <div class="venue-address" data-aos="fade-up">Nisar Bagh Resort, Mansehra</div>
     <a href="https://www.google.com/maps/search/?api=1&query=34.344333,73.218472" target="_blank" class="btn" data-aos="zoom-in">LOCATE ON MAP</a>
 </section>
 
 <section class="thank-you-section">
     <div data-aos="fade-up">
-        <p class="thank-you-msg">We look forward to seeing you</p>
-        <div class="signature">Savera & Ibrahim</div>
+        <p class="thank-you-msg">We would be honored by your presence and prayers</p>
     </div>
 </section>
 
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 <script>
   const music = document.getElementById("wedding-music");
-
   function toggleMusic() {
-      if (music.paused) {
-          music.play().catch(e => console.log("Music blocked"));
-          document.getElementById("music-toggle").innerHTML = "||";
-      } else {
-          music.pause();
-          document.getElementById("music-toggle").innerHTML = "♪";
-      }
+      if (music.paused) { music.play().catch(e => console.log("Music blocked")); document.getElementById("music-toggle").innerHTML = "||"; }
+      else { music.pause(); document.getElementById("music-toggle").innerHTML = "♪"; }
   }
-
-  function revealDate() {
-      document.getElementById('scratch-bar').classList.add('scratched');
+  function revealDate() { document.getElementById('scratch-bar').classList.add('scratched'); }
+  
+  function startFlowerShower() {
+      setInterval(() => {
+          const flower = document.createElement('div');
+          flower.classList.add('falling-flower');
+          const size = Math.random() * 40 + 30 + 'px';
+          flower.style.width = size;
+          flower.style.height = size;
+          flower.style.left = Math.random() * 100 + 'vw';
+          flower.style.animationDuration = `${Math.random() * 7 + 10}s, ${Math.random() * 2 + 4}s`;
+          document.body.appendChild(flower);
+          setTimeout(() => flower.remove(), 15000);
+      }, 800);
   }
 
   function openInvitation() {
       const wrapper = document.getElementById('envelope-wrapper');
       const musicBtn = document.getElementById('music-toggle');
+      const hint = document.getElementById('scroll-hint');
       wrapper.classList.add('envelope-opened');
-
       setTimeout(() => {
           document.getElementById('main-body').style.overflow = "auto";
           musicBtn.style.display = "flex";
+          hint.style.display = "flex";
           AOS.init({ once: true, duration: 1000 });
           toggleMusic();
           startFlowerShower(); 
           wrapper.style.visibility = "hidden";
       }, 1200);
   }
-
-  function startFlowerShower() {
-      setInterval(() => {
-          const flower = document.createElement('div');
-          flower.classList.add('falling-flower');
-          const size = Math.random() * 60 + 50 + 'px';
-          flower.style.width = size;
-          flower.style.height = size;
-          flower.style.left = Math.random() * 100 + 'vw';
-          const fallDuration = Math.random() * 7 + 10 + 's';
-          const swayDuration = Math.random() * 2 + 4 + 's';
-          flower.style.animationDuration = `${fallDuration}, ${swayDuration}`;
-          document.body.appendChild(flower);
-          setTimeout(() => flower.remove(), 15000);
-      }, 900);
-  }
-
+  
   const weddingDate = new Date("March 24, 2026 13:00:00").getTime();
   setInterval(() => {
       const now = new Date().getTime();
@@ -323,6 +274,5 @@
       }
   }, 1000);
 </script>
-
 </body>
 </html>
